fixed horizontal scrolling

--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -112,7 +112,7 @@ html.textSmall {
   padding: 2%;  
   background-color: #121212;
   min-height: 100vh;
-
+  max-width: 100%;
   .main {
   padding-top: 5%;
   display: flex;
@@ -128,7 +128,6 @@ html.textSmall {
 
 
 }
-  width: 100%;
 
 
 .display4 {
@@ -317,9 +316,12 @@ a:visited {
     max-width: 100%;
     margin: 0;
     border-radius: 0;
+    min-height: 100vh;
+
   }
   .wrapper {
     padding: 0; 
+    min-height: 100vh;
   }
   .subhead2 {
     @include font-size($font-size-dv-subhead);
